5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1649_2703.log
== TEST (2019-04-09 19:00:25) 
-- CODE:
ida=int(input("digite sua idade:"))
if (ida > 18)
	print("eleitor")
-- ERROR:
File "XXXX", line 2
    if (ida > 18)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:00:31) 
-- CODE:
ida=int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor")
-- ERROR:
File "XXXX", line 2
    if (ida > 18)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 19:01:34) 
-- CODE:
ida=int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else:
	print("nao eleitor".lower())
-- OUTPUT:
nao eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:01:40) 
-- CODE:
ida=int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else:
	print("nao eleitor".lower())
-- EXECUTION TIME:
0.164628
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 19:01:51) 
-- CODE:
ida=int(input("digite sua idade:"))
if (ida > 18):
	print("eleitor".lower())
else:
	print("nao_eleitor".lower())
-- EXECUTION TIME:
0.152873
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
